--- a/src/main/resources/com/example/demo/voting_portal_landing.fxml
+++ b/src/main/resources/com/example/demo/voting_portal_landing.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" cacheShape="false" prefHeight="316.0" prefWidth="353.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<VBox alignment="CENTER" cacheShape="false" prefHeight="316.0" prefWidth="353.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.VotingPortalLandingController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -14,9 +14,9 @@
          <Font size="20.0" />
       </font></Label>
    <Label />
-   <Button mnemonicParsing="false" text="User Log-in" />
-   <Button mnemonicParsing="false" text="User Sign-up" />
-   <Button mnemonicParsing="false" text="Admin Log-in" />
+   <Button id="VPUserLogin" fx:id="VPUserLogin" mnemonicParsing="false" onAction="#redirectUserLogin" text="User Log-in" />
+   <Button id="VPUserSignup" fx:id="VPUserSignup" mnemonicParsing="false" onAction="#redirectUserSignUp" text="User Sign-up" />
+   <Button id="VPAdminLogin" fx:id="VPAdminLogin" mnemonicParsing="false" onAction="#redirectAdminLogin" text="Admin Log-in" />
 
     <Label fx:id="welcomeText" />
 </VBox>
