--- a/src/main/resources/com/example/demo/admin_log_in.fxml
+++ b/src/main/resources/com/example/demo/admin_log_in.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminLogInController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminLoginController">
    <children>
       <Label layoutX="250.0" layoutY="50.0" text="Admin Log-in">
          <font>
@@ -13,8 +13,8 @@
       </Label>
       <Label layoutX="161.0" layoutY="126.0" text="Name" />
       <Label layoutX="152.0" layoutY="168.0" text="Password" />
-      <TextField id="ALINameBox" layoutX="236.0" layoutY="122.0" promptText="Enter Name" />
-      <PasswordField id="ALIPasswordBox" layoutX="236.0" layoutY="164.0" promptText="Enter Password" />
-      <Button id="ALIButton" layoutX="275.0" layoutY="285.0" mnemonicParsing="false" text="Log-in" />
+      <TextField id="ALINameBox" fx:id="ALINameBox" layoutX="236.0" layoutY="122.0" promptText="Enter Name" />
+      <Button id="ALIButton" fx:id="APLoginButton" layoutX="275.0" layoutY="285.0" mnemonicParsing="false" onAction="#adminLoginOK" text="Log-in" />
+      <PasswordField fx:id="ALIPasswordBox" layoutX="236.0" layoutY="164.0" />
    </children>
 </AnchorPane>
