--- a/src/main/resources/com/example/demo/authorise_users.fxml
+++ b/src/main/resources/com/example/demo/authorise_users.fxml
@@ -11,7 +11,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button id="AUAuthoriseButton" layoutX="433.0" layoutY="188.0" mnemonicParsing="false" text="Authorise" />
+      <Button id="AUAuthoriseButton" fx:id="AUAuthorise" layoutX="433.0" layoutY="188.0" mnemonicParsing="false" text="Authorise" />
       <ScrollPane layoutX="100.0" layoutY="138.0" prefHeight="200.0" prefWidth="200.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
