--- a/src/main/resources/com/example/demo/end_election.fxml
+++ b/src/main/resources/com/example/demo/end_election.fxml
@@ -17,6 +17,6 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
         </content>
       </ScrollPane>
-      <Button id="EEEndElectionButton" layoutX="401.0" layoutY="210.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="133.0" text="End Selected Election" />
+      <Button id="EEEndElectionButton" fx:id="EEEnd" layoutX="401.0" layoutY="210.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="133.0" text="End Selected Election" />
    </children>
 </AnchorPane>
