--- a/src/main/resources/com/example/demo/new_candidate.fxml
+++ b/src/main/resources/com/example/demo/new_candidate.fxml
@@ -17,6 +17,6 @@
       <TextField id="NCName" layoutX="232.0" layoutY="120.0" promptText="Candidate Name" />
       <TextField id="NCParty" layoutX="232.0" layoutY="150.0" promptText="Candidate Party" />
       <TextField id="NCDesc" layoutX="232.0" layoutY="179.0" promptText="Candidate Description" />
-      <Button id="NCCreateButton" layoutX="274.0" layoutY="322.0" mnemonicParsing="false" text="Create" />
+      <Button id="NCCreateButton" fx:id="NCCreate" layoutX="274.0" layoutY="322.0" mnemonicParsing="false" text="Create" />
    </children>
 </AnchorPane>
