--- a/src/main/resources/com/example/demo/view_results.fxml
+++ b/src/main/resources/com/example/demo/view_results.fxml
@@ -17,6 +17,6 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
         </content>
       </ScrollPane>
-      <Button layoutX="464.0" layoutY="200.0" mnemonicParsing="false" text="View" />
+      <Button fx:id="VRView" layoutX="464.0" layoutY="200.0" mnemonicParsing="false" onAction="#viewResults" text="View" />
    </children>
 </AnchorPane>
