--- a/src/main/resources/com/example/demo/authorise_users.fxml
+++ b/src/main/resources/com/example/demo/authorise_users.fxml
@@ -14,7 +14,7 @@
       <Button id="AUAuthoriseButton" fx:id="AUAuthorise" layoutX="433.0" layoutY="188.0" mnemonicParsing="false" text="Authorise" />
       <ScrollPane layoutX="100.0" layoutY="138.0" prefHeight="200.0" prefWidth="200.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+          <AnchorPane fx:id="candidateListView" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
         </content>
       </ScrollPane>
       <Label layoutX="100.0" layoutY="115.0" text="Users" />
