--- a/src/main/resources/com/example/demo/end_election.fxml
+++ b/src/main/resources/com/example/demo/end_election.fxml
@@ -11,12 +11,12 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="82.0" layoutY="125.0" text="Elections" />
-      <ScrollPane layoutX="171.0" layoutY="125.0" prefHeight="200.0" prefWidth="200.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
-      <Button id="EEEndElectionButton" fx:id="EEEnd" layoutX="401.0" layoutY="210.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="133.0" text="End Selected Election" />
+      <Label layoutX="154.0" layoutY="152.0" text="Once an election has been ended, it cannot be restarted!" textFill="#ce0000">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Label>
+      <Button fx:id="EEConfirmButton" layoutX="259.0" layoutY="220.0" mnemonicParsing="false" onAction="#EndElection" text="End Election" />
+      <Button fx:id="EEBackButton" layoutX="280.0" layoutY="270.0" mnemonicParsing="false" onAction="#EEBack" text="Back" />
    </children>
 </AnchorPane>
