--- a/src/main/resources/com/example/demo/admin_new_election.fxml
+++ b/src/main/resources/com/example/demo/admin_new_election.fxml
@@ -15,7 +15,12 @@
       <Label layoutX="142.0" layoutY="121.0" text="Election Name" />
       <Button fx:id="NECreateButton" layoutX="274.0" layoutY="200.0" mnemonicParsing="false" onAction="#createElection" text="Create" />
       <Button fx:id="NEBackButton" layoutX="279.0" layoutY="275.0" mnemonicParsing="false" onAction="#returnToAdminPortal" text="Back" />
-      <Label layoutX="161.0" layoutY="240.0" text="Creating a new election will end any running election!" textFill="#cc0000">
+      <Label fx:id="NEMessageLabel" layoutX="161.0" layoutY="240.0" text="Creating a new election will end any running election!" textFill="#cc0000">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="NEErrorLabel" layoutX="115.0" layoutY="173.0">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
