seperated methods into units

--- a/src/main/resources/com/example/demo/admin_log_in.fxml
+++ b/src/main/resources/com/example/demo/admin_log_in.fxml
@@ -21,5 +21,6 @@
             <Font name="System Italic" size="12.0" />
          </font>
       </Label>
+      <Button fx:id="ALCancel" layoutX="275.0" layoutY="327.0" mnemonicParsing="false" onAction="#ALGoBack" text="Cancel" />
    </children>
 </AnchorPane>
