--- a/src/main/resources/com/example/demo/voting_screen.fxml
+++ b/src/main/resources/com/example/demo/voting_screen.fxml
@@ -13,5 +13,6 @@
       <Button fx:id="votingScreenButton" layoutX="437.0" layoutY="188.0" mnemonicParsing="false" onAction="#confirmVote" text="Vote" />
       <ListView fx:id="votingCandidateListView" layoutX="90.0" layoutY="113.0" prefHeight="200.0" prefWidth="200.0" />
       <Label fx:id="selectCandidateLabel" layoutX="413.0" layoutY="140.0" text="Select Candidate" />
+      <Button fx:id="VMBackButton" layoutX="437.0" layoutY="236.0" mnemonicParsing="false" onAction="#VMGoBack" text="Back" />
    </children>
 </AnchorPane>
