--- a/src/main/resources/com/example/demo/user_sign_up.fxml
+++ b/src/main/resources/com/example/demo/user_sign_up.fxml
@@ -15,12 +15,11 @@
       <Label layoutX="128.0" layoutY="158.0" text="Address" />
       <Label layoutX="120.0" layoutY="182.0" text="ID Number" />
       <Label layoutX="124.0" layoutY="207.0" text="Password" />
-      <Label layoutX="101.0" layoutY="228.0" text="Confirm Password" />
       <TextField id="USUName" fx:id="USUNameBox" layoutX="226.0" layoutY="130.0" promptText="Name" />
       <TextField id="USUAddress" fx:id="USUAddressBox" layoutX="226.0" layoutY="154.0" promptText="Address" />
       <TextField id="USUIDNum" fx:id="USUIDBox" layoutX="226.0" layoutY="178.0" promptText="ID Number" />
       <TextField id="USUPassword" fx:id="USUPasswordBox" layoutX="226.0" layoutY="203.0" promptText="Password" />
-      <TextField id="USUConfirmPassword" fx:id="USUConfirmBox" layoutX="226.0" layoutY="228.0" promptText="Confirm Password" />
-      <Button fx:id="USUOkay" layoutX="278.0" layoutY="307.0" mnemonicParsing="false" onAction="#redirectUserLogin" text="Okay" />
+      <Button fx:id="USUOkay" layoutX="278.0" layoutY="307.0" mnemonicParsing="false" onAction="#confirmSignup" text="Okay" />
+      <Button fx:id="USUBackButton" layoutX="280.0" layoutY="344.0" mnemonicParsing="false" onAction="#USUGoBack" text="Back" />
    </children>
 </AnchorPane>
