--- a/src/main/resources/com/example/demo/admin_portal.fxml
+++ b/src/main/resources/com/example/demo/admin_portal.fxml
@@ -4,16 +4,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminPortalController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminPortalController">
    <children>
       <Label layoutX="242.0" layoutY="47.0" text="Admin Portal">
          <font>
             <Font size="20.0" />
          </font></Label>
       <Button id="APNEButton" fx:id="APNewElection" layoutX="46.0" layoutY="133.0" mnemonicParsing="false" onAction="#NewElectionGo" prefHeight="47.0" prefWidth="108.0" text="New Election" />
-      <Button id="APEEButton" fx:id="APEndElection" layoutX="442.0" layoutY="133.0" mnemonicParsing="false" onAction="#EndElectionGo" prefHeight="47.0" prefWidth="108.0" text="End Election" />
       <Button id="APVRButton" fx:id="APViewResults" layoutX="46.0" layoutY="252.0" mnemonicParsing="false" onAction="#ViewResultsGo" prefHeight="47.0" prefWidth="108.0" text="View Results" />
-      <Button id="APAUButton" fx:id="APAuthoriseUsers" layoutX="442.0" layoutY="252.0" mnemonicParsing="false" onAction="#AuthoriseUsersGo" prefHeight="47.0" prefWidth="108.0" text="Authorise Users" />
       <Button id="APLOButton" fx:id="APLogOut" layoutX="271.0" layoutY="327.0" mnemonicParsing="false" onAction="#redirectToVP" text="Log-out" />
       <Button fx:id="APAddCandidates" layoutX="249.0" layoutY="180.0" mnemonicParsing="false" onAction="#redirectCreateCandidate" prefHeight="47.0" prefWidth="108.0" text="Add Candidates" />
    </children>
